src/test/resources/mutation/error/serviceAndMutationTypeNotSet/schema.graphqls
type Mutation {
  editCustomer(id: ID!): ID!
}
